# src/sample_dbTest.js
@@ -1,52 +1,52 @@
-const express = require('express');
-const db = require('../models/index.js'); 
+// const express = require('express');
+// const db = require('../models/index.js'); 
 
-const app = express();
-const PORT = process.env.PORT || 3000;
-app.use(express.json())
-// Route to test database connection
-app.get('/test-db', async (req, res) => {
-  try {
-    await db.sequelize.authenticate();
-    res.status(200).json({ message: 'Database connection successful!' });
-  } catch (error) {
-    console.error('Database connection failed:', error);
-    res.status(500).json({ message: 'Database connection failed!', error: error.message });
-  }
-});
-
-
-
-app.post('/create-user', async (req, res) => {
-  try {
-    const { firstName, lastName, email, preferredLanguage, preferredCurrency, whereYouLive, role, department, lineManager, gender, telephoneNumber } = req.body;
+// const app = express();
+// const PORT = process.env.PORT || 3000;
+// app.use(express.json())
+// // Route to test database connection
+// app.get('/test-db', async (req, res) => {
+//   try {
+//     await db.sequelize.authenticate();
+//     res.status(200).json({ message: 'Database connection successful!' });
+//   } catch (error) {
+//     console.error('Database connection failed:', error);
+//     res.status(500).json({ message: 'Database connection failed!', error: error.message });
+//   }
+// });
 
 
-    if (!firstName || !lastName || !email  || !gender || !telephoneNumber) {
-      return res.status(500).json({ message: 'Missing required fields!' });
-    }
+
+// app.post('/create-user', async (req, res) => {
+//   try {
+//     const { firstName, lastName, email, preferredLanguage, preferredCurrency, whereYouLive, role, department, lineManager, gender, telephoneNumber } = req.body;
+
+
+//     if (!firstName || !lastName || !email  || !gender || !telephoneNumber) {
+//       return res.status(500).json({ message: 'Missing required fields!' });
+//     }
 
   
-    const user = await db.User.create({
-      firstName,
-      lastName,
-      email,
-      // birthOfDate,
-      preferredLanguage,
-      preferredCurrency,
-      whereYouLive,
-      role,
-      department,
-      lineManager,
-      gender,
-      telephoneNumber
-    });
+//     const user = await db.User.create({
+//       firstName,
+//       lastName,
+//       email,
+//       // birthOfDate,
+//       preferredLanguage,
+//       preferredCurrency,
+//       whereYouLive,
+//       role,
+//       department,
+//       lineManager,
+//       gender,
+//       telephoneNumber
+//     });
 
-    res.status(201).json({ message: 'User created successfully!', user });
-  } catch (error) {
-    console.error('User creation failed:', error);
-    res.status(500).json({ message: 'User creation failed!', error: error.message });
-  }
-});
+//     res.status(201).json({ message: 'User created successfully!', user });
+//   } catch (error) {
+//     console.error('User creation failed:', error);
+//     res.status(500).json({ message: 'User creation failed!', error: error.message });
+//   }
+// });
 
-module.exports = { app, db };
+// module.exports = { app, db };
