# src/server.js
@@ -5,19 +5,16 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json'); // Assuming your swagger.json is located at this path
 const userRoutes = require('./routes/userRoutes'); // Import user routes
 
-// Load environment variables from .env file
 dotenv.config();
 
 const app = express();
 const PORT = process.env.PORT || 3000;
 
-// Middleware to parse JSON
 app.use(bodyParser.json());
 
 // Set up user routes
-app.use('/api/users', userRoutes); // Register the user routes
+app.use('/api/v1', userRoutes); 
 
-// Swagger API documentation route
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // Start the server
